--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "description": "Nice contrast theme in blue tones",
   "keywords": [
+    "Myneon Syntax",
     "syntax",
     "theme"
   ],
